--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,19 +34,19 @@ body {
   }
 } */
 
-.leaflet-control { z-index: 0 !important}
+/* .leaflet-control { z-index: 0 !important}
 .leaflet-pane { z-index: 0 !important}
 .leaflet-top, .leaflet-bottom {z-index: 0 !important}
 
 .leaflet-right .leaflet-routing-container.leaflet-routing-container-hide {
   display: none;
-}
+} */
 
 #map{
   position: absolute;
-  left: 0px;
+  left: 50px;
   right: 0px;
-  top: 0px;
+  top: 60px;
   bottom: 0px;
   border: lightgray;
   z-index: -1;
@@ -171,12 +171,12 @@ h4{
   border-radius: 10px;
   text-align:left;
 }
-#rating{
+/* #rating{
   background-color: hsl(120, 30%, 75%);
   width: 50%;
   padding: 10px;
   margin: 10px;
-}
+} */
 #legend-text{
   padding: 10px;
 }
@@ -192,14 +192,14 @@ h4{
 #comments{
   height: 50px;
 }
-input[type=text]{
+/* input[type=text]{
   margin: 10px;
   background-color: hsl(120, 30%, 75%);
 }
 input[type=date]{
   margin: 10px;
   background-color: hsl(120, 30%, 75%);
-}  
+}   */
 #park-info{
   border: 2px solid #ccc;
   background-color: white;
@@ -366,4 +366,33 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.suggestion {
+  margin-top: 0.5rem; /* Equivalent to mt-2 */
+  max-height: 8rem; /* Equivalent to max-h-24 */
+  overflow-y: auto;
+  border: 1px solid #d1d5db; /* Equivalent to border border-gray-300 */
+  border-radius: 0.375rem; /* Equivalent to rounded */
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); /* Equivalent to shadow-md */
+  color: #4b5563; /* Equivalent to text-gray-700 */
+}
+
+.suggest-input {
+  width: 100%;
+}
+
+.leaflet-control-custom {
+  background-color: white;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+  cursor: pointer;
+}
+
+.leaflet-control-custom button {
+  background: none;
+  border: none;
+  font-size: 14px;
+  padding: 3px;
 }
